src/LuckyDraw V1.0/src/objects/Charket__WeChatCouponDelivery__c.object
<CustomObject>
    <fields>
        <fullName>Charket__Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Charket__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Redeemed</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Transfered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__WeChatCoupon__c</fullName>
        <label>WeChat Coupon</label>
        <referenceTo>Charket__WeChatCoupon__c</referenceTo>
        <relationshipLabel>WeChat Coupon Deliveries</relationshipLabel>
        <relationshipName>WeChatCouponDeliverys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatFollower__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WeChat Follower</label>
        <referenceTo>Charket__WeChatFollower__c</referenceTo>
        <relationshipLabel>WeChat Coupon Deliveries</relationshipLabel>
        <relationshipName>WeChatCouponDeliverys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WeChat Coupon Delivery</label>
    <nameField>
        <displayFormat>WCD-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Coupon Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>